--- a/codingame.yml
+++ b/codingame.yml
@@ -8,7 +8,7 @@ plan:
     statement: markdowns/part3.md
 projects:
   java:
-    root: kotlin-project
+    root: hello-world
     runner:
       name: codingame/java-maven3-junit4-runner
       version: 1.1.1-java-8
