--- a/codingame.yml
+++ b/codingame.yml
@@ -10,5 +10,5 @@ projects:
   java:
     root: hello-world
     runner:
-      name: codingame/java-maven3-junit4-runner
-      version: 1.1.1-java-8
+      name: fraisse/maven-runner
+      version: 2
