Use the CG maven runner

--- a/codingame.yml
+++ b/codingame.yml
@@ -9,7 +9,7 @@ plan:
 projects:
   java:
     root: hello-world
-    buildCommand: "chmod +x prebuild.sh && ./prebuild.sh"
+#   buildCommand: "chmod +x prebuild.sh && ./prebuild.sh"
     runner:
-      name: fraisse/maven-runner
-      version: 2
+      name: codingame/java-maven3-junit4-runner
+      version: 1.1.1-java-8
